# llama-manager

./: .gitignore  README.md  alembic.ini  config.example.yaml  linux-agent.config.example.yaml  pyproject.toml  raspberry-pi-controller.config.example.yaml
.github/workflows/: ci.yml
docs/: alembic-pydantic-migration-plan.md  architecture.md  how-to-use.md  pi-controller-topology.md  review-2026-05-12-complexity-efficiency-github.md  review-2026-05-12-god-files-round2.md  windows-install.md
docs/adr/: 2026-05-12-alembic-pydantic-task-1-decisions.md
frontend-tests/: package-lock.json  package.json
frontend-tests/tests/: chatSessions.test.js  chatTelemetry.test.js  chatThreads.test.js  nodesView.test.js
llama_manager/: auth.py  main.py
llama_manager/api/: dependencies.py
llama_manager/ui/: app.js  chat_sessions.js  chat_telemetry.js  chat_threads.js  index.html  nodes_view.js  (+1 more)
migrations/: README.md  env.py
scripts/: linux_agent_smoke.py  onboard_agent.sh  onboard_controller.sh  start_agent.sh  start_controller.sh  start_server.sh  stop_server.sh
tests/: persistence_db_setup.py  test_agent_heartbeat.py  test_alembic_config.py  test_api.py  test_app_state_orm_models.py  test_auth_cli.py  test_auth_store_orm.py  test_chat_session_store_orm.py  test_config.py  test_downloads.py  test_execution_substrate.py  test_frontend_tests.py  test_gguf_library.py  test_model_transfers.py  test_node_registry.py  test_persistence_db_infra.py  test_process_manager.py  test_runtime_scripts.py  test_thread_routing_policy.py  test_thread_store.py  test_threads_api.py
(+64 files in other folders)
