[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamacpp-handler"
version = "0.1.0"
description = "FastAPI llama.cpp process manager and controller"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "httpx>=0.27",
    "psutil>=5.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["llama_manager*"]

[tool.setuptools.package-data]
llama_manager = ["ui/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
